WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27725
[WML] Page title doesn't update after variable substitution, if it contained variables
https://bugs.webkit.org/show_bug.cgi?id=27725
Summary
[WML] Page title doesn't update after variable substitution, if it contained ...
Nikolas Zimmermann
Reported
2009-07-27 11:32:51 PDT
Breaks manual-tests/wml/task-refresh-in-anchor.wml. The card title contains a variable reference. As soon as the variable is substituted, the page title should change. It doesn't at the moment.
Attachments
Initial patch
(6.11 KB, patch)
2009-07-28 07:46 PDT
,
Nikolas Zimmermann
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2009-07-28 07:46:11 PDT
Created
attachment 33631
[details]
Initial patch
Nikolas Zimmermann
Comment 2
2009-07-28 08:03:42 PDT
Landed in
r46486
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug