2009-07-28  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

Reviewed by George Staikos.

        [WML] Page title doesn't update after variable substitution, if it contained variables
        https://bugs.webkit.org/show_bug.cgi?id=27725

        Fix bug in containsVariableReference() function, we we're decreasing the nameEndPosition
        too much, leading to a bug with 1-char variable names, which were not detected properly.

        Extend wml/variable-reference-valid.html layout test to cover 1-char variable names.
        Also fixes manual-tests/wml/task-refresh-in-anchor.wml, which happened to use 1-char variable names.

        * wml/WMLVariables.cpp:
        (WebCore::containsVariableReference):

2009-07-28  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by George Staikos.

        [WML] Page title doesn't update after variable substitution, if it contained variables
        https://bugs.webkit.org/show_bug.cgi?id=27725

        Extend variable-reference-valid.html test to include one-character variable tests.

        * wml/resources/variable-reference-valid.js:
        (setupTestDocument):
        (prepareTest):
        (executeTest):
        * wml/variable-reference-valid-expected.txt:


Canonical link: https://commits.webkit.org/38093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46486 268f45cc-cd09-0410-ab3c-d52691b4dbfc