LayoutTests/wml/resources/variable-reference-valid.js
@@ -2,11 +2,6 @@
 
 createWMLTestCase("Tests valid variable references");
 
-var pElement1;
-var pElement2;
-var pElement3;
-var pElement4;
-
 function setupTestDocument() {
     var cardElement = testDocument.documentElement.firstChild;
 
@@ -30,6 +25,11 @@ function setupTestDocument() {
     setvarElement2.setAttribute("value", "TEST%20PASSED");
     refreshElement.appendChild(setvarElement2);
 
+    var setvarElement3 = createWMLElement("setvar");
+    setvarElement3.setAttribute("name", "v");
+    setvarElement3.setAttribute("value", "TEST PASSED");
+    refreshElement.appendChild(setvarElement3);
+
     pElement1 = createWMLElement("p");
     pElement1.textContent = "Result: $var";
     cardElement.appendChild(pElement1);
@@ -45,6 +45,14 @@ function setupTestDocument() {
     pElement4 = createWMLElement("p");
     pElement4.textContent = "Result: $(var2:unesc)";
     cardElement.appendChild(pElement4);
+
+    pElement5 = createWMLElement("p");
+    pElement5.textContent = "Result: $v";
+    cardElement.appendChild(pElement5);
+
+    pElement6 = createWMLElement("p");
+    pElement6.textContent = "Result: $(v:e)";
+    cardElement.appendChild(pElement6);
 }
 
 function prepareTest() {
@@ -52,7 +60,9 @@ function prepareTest() {
     shouldBeEqualToString("pElement2.textContent", "Result: $(var:e)");
     shouldBeEqualToString("pElement3.textContent", "Result: $(var2)");
     shouldBeEqualToString("pElement4.textContent", "Result: $(var2:unesc)");
- 
+    shouldBeEqualToString("pElement5.textContent", "Result: $v");
+    shouldBeEqualToString("pElement6.textContent", "Result: $(v:e)");
+
     startTest(25, 15);
 }
 
@@ -61,6 +71,8 @@ function executeTest() {
     shouldBeEqualToString("pElement2.textContent", "Result: TEST%20PASSED");
     shouldBeEqualToString("pElement3.textContent", "Result: TEST%20PASSED");
     shouldBeEqualToString("pElement4.textContent", "Result: TEST PASSED");
+    shouldBeEqualToString("pElement5.textContent", "Result: TEST PASSED");
+    shouldBeEqualToString("pElement6.textContent", "Result: TEST%20PASSED");
 
     completeTest();
 }
